# speak-please

./: .gitignore  Cargo.toml  README.md  database.db  index.html  package.json  speak-please.pptx  vite.config.ts
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs
server/: Cargo.toml
server/src/: main.rs  quests.json  test_quests.json
server/src/entities/: lobbies.rs  lobbies_members.rs  messages.rs  mod.rs  quest_proof_beliefs.rs  quest_proofs.rs  quests.rs  refresh_tokens.rs  user_quest_status.rs  users.rs
server/src/errors/: auth_error.rs
server/src/file_storage/: s3_client.rs
server/src/middleware/: jwt_verify_middleware.rs  mod.rs
server/src/routes/: lobby_routes.rs  message_routes.rs  mod.rs  quest_proof_routes.rs  refresh_token_routes.rs  user_quest_status_routes.rs  user_routes.rs
server/src/routes/tests/: lobby_tests.rs  mod.rs  user_tests.rs
server/src/service/: daily_quest_service.rs  lobby_member_service.rs  lobby_service.rs  message_service.rs  mod.rs  quest_proof_service.rs  quest_service.rs  refresh_token_service.rs  user_quest_status_service.rs  user_service.rs
server/src/service/tests/: lobby_member_tests.rs  lobby_tests.rs  mod.rs  quest_tests.rs  user_tests.rs
server/src/utils/: hashing.rs
shared/: Cargo.toml  build.rs
shared/src/: lib.rs
shared/src/endpoints/: lobby_endpoints.rs  message_endpoints.rs  mod.rs  quest_proof_endpoints.rs  refresh_token_endpoints.rs  user_endpoints.rs  user_quest_status_endpoints.rs
shared/src/entities/: daily_quests.rs  mod.rs  refresh_tokens.rs  user_quest_status.rs  users.rs
shared/src/errors/: auth_errors.rs  jwt_errors.rs  mod.rs
shared/src/models/: lobby_dto.rs  message_dto.rs  mod.rs  quest_dto.rs  quest_proof_dto.rs  refresh_token_dto.rs  user_dto.rs  user_quest_status_dto.rs
shared/src/utils/: hashing.rs  jwt.rs  mod.rs  time.rs  ulid_validation.rs  validation.rs
src/: App.css  App.tsx  bindings.ts  main.tsx
src/components/: BottomAppBar.tsx  CreateLobbySheet.tsx  DailyList.tsx  Layout.tsx  LobbyChat.tsx  LobbyItem.tsx  NavigationDrawer.tsx  ProofSheet.tsx  ProtectedRoute.tsx  TopAppBar.tsx
src/pages/: archive.tsx  feed.tsx  home.tsx  lobby_feed.tsx  login.tsx  registration.tsx
src/stores/: authStore.tsx  taskStore.tsx
tauri-app/: Cargo.toml  build.rs  db.sql  tauri.conf.json
tauri-app/.cargo/: config.toml
tauri-app/capabilities/: default.json
tauri-app/icons/: icon.icns
tauri-app/src/: lib.rs  main.rs
tauri-app/src/auth/: keyring.rs  mod.rs  service.rs  session.rs
tauri-app/src/commands/: auth_commands.rs  lobby_commands.rs  mod.rs  quest_commands.rs
