[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "2.0.0-rc.22", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
tokio = { version = "1.47.2", features = ["full"] }
anyhow = "1.0.100"
argon2 = { version = "0.6.0-rc.5", features = ["getrandom"] }
password-hash = { version = "0.6.0-rc.6", features = ["rand_core"] }
axum = "0.8.8"
