[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
migration = { path = "../migration" }
shared = { path = "../shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "2.0.0-rc.22", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
  "debug-print",
  "mock",
] }
tokio = { version = "1.47.2", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
] }
argon2 = { version = "0.6.0-rc.5", features = ["getrandom"] }
password-hash = { version = "0.6.0-rc.6", features = ["rand_core"] }
axum = { version = "0.8.8", features = ["ws"] }
axum-extra = { version = "0.12.3", features = ["typed-header"] }
axum-test = "18.7.0"
jwt-simple = "0.12.13"
dotenv = "0.15.0"
ulid = "1.2.1"
validator = { version = "0.20", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6.8", features = ["trace"] }
aws-sdk-s3 = "1.119.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
specta = { version = "=2.0.0-rc.22", features = ["chrono", "derive"] }
chrono = "0.4.42"
