[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "2.0.0-rc.22", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
tokio = { version = "1.47.2", features = ["full"] }
anyhow = "1.0.100"
