[package]
name = "speak-please"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "speak_please_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenv = "0.15.0"

[dependencies]
shared = { path = "../shared" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47.2", features = ["full"] }
anyhow = "1.0.100"
ulid = "1.2.1"
validator = "0.20.0"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
specta = { version = "=2.0.0-rc.22", features = ["chrono", "serde"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript", "derive"] }
specta-typescript = "0.0.9"
tauri-plugin-store = "2"
keyring = { version = "3.6.3", default-features = false, features = [
  "crypto-rust",
] }
dotenvy_macro = "0.15.7"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", features = ["linux-native-async-persistent"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", features = ["windows-native"] }

[target.'cfg(target_os = "android")'.dependencies]
android-keyring = "0.2.0"
